--- a/src/css/vite-promo.css
+++ b/src/css/vite-promo.css
@@ -35,6 +35,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
+  margin-right: 150px;
 }
 
 .vite-promo .tagline {
